k8s/ingress.yaml
# INGRESS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-hub-ingress
  namespace: resume-hub
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80

          - path: /stats
            pathType: Prefix
            backend:
              service:
                name: worker-stats-service
                port:
                  number: 3002
